tests/paczka1/small_fuzzy/72653848.err
Error in line 3: YbdrCCQAij A783 30,0
Error in line 7: 1BWEGU S77 60,2
Error in line 9: 1BWEGU S653 255,2
Error in line 1: ANIVVe S77 48,6
